src/test/resources/scripts/language/parser/valid/list/listFun.sbsc
// declare a list of functions
let {
  b = () -> {},
  d = [() -> {}, b, () -> {}]
} in true