src/test/resources/scripts/language/parser/invalid/list/genericListFunctionMismatch.sbsc
// list element generic signature mismatch

a = (q: num) -> {};

b = (q: int) -> {};

c = [a, b];

return false;